--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
             # Navigate to the project directory and deploy
             git clone https://github.com/Fola-Git/FastAPI-CI-CD-Book-Project.git
             cd /home/azureuser/
-            cd FastAPI-CI-CD-Project/
+            cd FastAPI-CI-CD-Book-Project/
             git pull
             sudo docker-compose up -d --build
           
